# objcopy_lib

./: CMakeLists.txt  func.cpp  test.cpp
